changed default font on .scss file. this worked, so revert if anything fails

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github_username: jinyoungch0i
 
 # Fields minima uses, but are not defaulted with the jekyll new command.
 # Author is the default for posts, the Atom feed, and is used in the footer.
-author: jinyoung choi
+author: jinyoung
 linkedin_username: jinyoungch0i
 
 # New fields not defaulted by jekyll-new with the minima theme (i.e. these are custom fields)
