--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # feature for the data you need to update frequently.
 #
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+# 'bundle exec jekyll serve --livereload'. If you change this file, please restart the server process.
 #
 # If you need help with YAML syntax, here are some quick references for you:
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
@@ -22,7 +22,7 @@ title: jinyoung
 email: jinyoungsjourney@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   An open book on everyday observations and deeper reflections on defining life endeavours
-baseurl: "/xyz" # the subpath of your site, e.g. /blog
+baseurl: /xyz # the subpath of your site, e.g. /blog
 url: "https://jinyoungch0i.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username: jinyoungch0i
