reset baseurl in config.yml to just empty quotes

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: jinyoung
 email: jinyoungsjourney@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   An open book on everyday observations and deeper reflections on defining life endeavours
-baseurl: /xyz # the subpath of your site, e.g. /blog
+baseurl: '' # the subpath of your site, e.g. /blog
 url: "https://jinyoungch0i.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username: jinyoungch0i
