deleted description in config.yml as a temporary solution to modifying title of about/home page

--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@
 
 title: jinyoung
 email: jinyoungsjourney@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  An open book on everyday observations and deeper reflections on defining life endeavours
+# description: >- # this means to ignore newlines until "baseurl:"
+
 baseurl: '' # the subpath of your site, e.g. /blog
 url: "https://jinyoungch0i.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
