--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: jinyoung
 email: jinyoungsjourney@gmail.com
-# description: >- # this means to ignore newlines until "baseurl:"
+description: >- # this means to ignore newlines until "baseurl:"
 
 baseurl: '' # the subpath of your site, e.g. /blog
 url: "https://jinyoungch0i.github.io" # the base hostname & protocol for your site, e.g. http://example.com
